--- a/index.html
+++ b/index.html
@@ -2,38 +2,38 @@
 <html lang="en">
 
 <head>
-     <!-- Required meta tags always come first -->
-     <meta charset="utf-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-     <meta http-equiv="x-ua-compatible" content="ie=edge">
- 
-     <!-- Bootstrap CSS -->
-     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <!-- Required meta tags always come first -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <title>Ristorante Con Fusion</title>
 </head>
 
 <body>
 
-    <header>
-        <div>
-            <div>
-                <div>
+    <header class="jumbotron">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-sm-8">
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking
                         creations will tickle your culinary senses!</p>
                 </div>
-                <div>
+                <div class="col col-sm">
                 </div>
             </div>
         </div>
     </header>
 
-    <div>
-        <div>
-            <div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4 push-sm-8 col-md-3 push-md-9">
                 <h3>Our Lipsmacking Culinary Creations</h3>
             </div>
-            <div>
+            <div class="col-sm pull-sm-4 col-md pull-md-3">
                 <h2>Uthappizza</h2>
                 <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine
                     cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
@@ -41,11 +41,11 @@
         </div>
 
 
-        <div>
-            <div>
+        <div class="row">
+            <div class="col-sm-4 col-md-3">
                 <h3>This Month's Promotions</h3>
             </div>
-            <div>
+            <div class="col-sm col-md">
                 <h2>Weekend Grand Buffet</h2>
                 <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six
                     main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per
@@ -53,11 +53,11 @@
             </div>
         </div>
 
-        <div>
-            <div>
+        <div class="row">
+            <div class="col-sm-4 push-sm-8 col-md-3 push-md-9">
                 <h3>Meet our Culinary Specialists</h3>
             </div>
-            <div>
+            <div class="col-sm pull-sm-4 col-md pull-md-3">
                 <h2>Alberto Somayya</h2>
                 <h4>Executive Chef</h4>
                 <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who
@@ -67,9 +67,9 @@
     </div>
 
     <footer>
-        <div>
-            <div>
-                <div>
+        <div class="container">
+            <div class="row">
+                <div class="col-5 offset-1 col-sm-2">
                     <h5>Links</h5>
                     <ul>
                         <li>
@@ -86,7 +86,7 @@
                         </li>
                     </ul>
                 </div>
-                <div>
+                <div class="col-6 col-sm-5">
                     <h5>Our Address</h5>
                     <address>
                         121, Clear Water Bay Road
@@ -98,7 +98,7 @@
                         <a href="mailto:confusion@food.net">confusion@food.net</a>
                     </address>
                 </div>
-                <div>
+                <div class="col col-sm-4">
                     <div>
                         <a href="http://google.com/+">Google+</a>
                         <a href="http://www.facebook.com/profile.php?id=">Facebook</a>
@@ -109,8 +109,8 @@
                     </div>
                 </div>
             </div>
-            <div>
-                <div>
+            <div class="row">
+                <div class="col-auto">
                     <p>© Copyright 2015 Ristorante Con Fusion</p>
                 </div>
             </div>
