--- a/index.html
+++ b/index.html
@@ -86,11 +86,16 @@
             <div class="col-sm-4 col-md-3">
                 <h3>This Month's Promotions</h3>
             </div>
-            <div class="col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six
-                    main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per
-                    person </p>
+            <div class="col-sm col-md media">
+                <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/buffet.png" alt="Uthappizza">
+                <div class="media-body">
+                    <h2 class="mt-0">Weekend Grand Buffet
+                        <span class="badge badge-danger">NEW</span>
+                    </h2>
+                    <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers,
+                        six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99
+                        per person </p>
+                </div>
             </div>
         </div>
 
@@ -120,19 +125,19 @@
                     <form>
                         <div class="form-group row">
                             <label class="col-md-2 col-form-label">Number of Guests</label>
-                            <div class="col-md-10" id="guestNumber">
-                                <label class="radio-inline">
-                                    <input type="radio" name="optradio"> 1</label>
-                                <label class="radio-inline">
-                                    <input type="radio" name="optradio"> 2</label>
-                                <label class="radio-inline">
-                                    <input type="radio" name="optradio"> 3</label>
-                                <label class="radio-inline">
-                                    <input type="radio" name="optradio"> 4</label>
-                                <label class="radio-inline">
-                                    <input type="radio" name="optradio"> 5</label>
-                                <label class="radio-inline">
-                                    <input type="radio" name="optradio"> 6</label>
+                            <div class="col-md-10">
+                                <label>
+                                    <input type="radio" name="optradio"> 1&nbsp&nbsp</label>
+                                <label>
+                                    <input type="radio" name="optradio"> 2&nbsp&nbsp</label>
+                                <label>
+                                    <input type="radio" name="optradio"> 3&nbsp&nbsp</label>
+                                <label>
+                                    <input type="radio" name="optradio"> 4&nbsp&nbsp</label>
+                                <label>
+                                    <input type="radio" name="optradio"> 5&nbsp&nbsp</label>
+                                <label>
+                                    <input type="radio" name="optradio"> 6&nbsp&nbsp</label>
                             </div>
                         </div>
                         <div class="form-group row">
@@ -157,10 +162,6 @@
                         </div>
                     </form>
                 </div>
-            </div>
-
-            <div class="col-12 col-md-9">
-
             </div>
         </div>
     </div>
