assignment-2-bootstrap-css-components-fix

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-md-3 align-self-center">
-                    <button type="submit" class="btn-sm btn-warning" style="width:100%">Reserve Table</button>
+                    <a href="#reservTable" type="submit" class="btn-sm btn-block btn-warning align-self-center" style="text-align:center">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -125,7 +125,7 @@
             <div class="card col-12 col-sm-8">
                 <h3 class="card-header card-warning text-white">Reserve a Table</h3>
                 <div class="card-block">
-                    <form>
+                    <form id="reservTable">
                         <div class="form-group row">
                             <label class="col-md-2 col-form-label">Number of Guests</label>
                             <div class="col-md-10">
