--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 </div>
                 <div class="col-12 col-md-3 align-self-center">
                     <!-- <a href="#reservTable" type="button" class="btn-sm btn-block btn-warning align-self-center" style="text-align:center">Reserve Table</a> -->
-                    <a href="#reservTable" type="button" class="btn btn-warning btn-sm btn-block" data-toggle="modal" data-html="true" title="Or Call us at  <br><strong>+852 12345678</strong>"
+                    <a href="#reservTable" type="button" class="btn btn-warning btn-sm btn-block" data-toggle="modal" data-html="true" 
                         data-placement="bottom" data-target="#resevModal">Reserve Table</a>
                 </div>
             </div>
@@ -214,7 +214,7 @@
                 </div>
             </div>
         </div>
-
+<!--
         <div class="row row-content align-items-center">
             <div class="card col-12 col-sm-8">
                 <h3 class="card-header card-warning text-white">Reserve a Table</h3>
@@ -261,6 +261,8 @@
                 </div>
             </div>
         </div>
+-->
+
     </div>
 
     <div id="resevModal" class="modal fade" role="dialog">
@@ -399,11 +401,11 @@
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/tether/dist/js/tether.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
+    <!-- <script>
         $(document).ready(function () {
             $('[data-toggle="tooltip"]').tooltip();
         });
-    </script>
+    </script> -->
 </body>
 
 </html>
