--- a/index.html
+++ b/index.html
@@ -16,6 +16,66 @@
 </head>
 
 <body>
+    <div id="resevModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve a Table</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form class="form-group">
+                        <div class="form-group row">
+                            <label class="control-label col-md-2 operation-label">Number of Guests</label>
+                            <div class="input-group col-md-6">
+                                    <label class="radio-inline mr-3"><input type="radio" name="guests" value="1"> 1</label>
+                                    <label class="radio-inline mr-3"><input type="radio" name="guests" value="2"> 2</label>
+                                    <label class="radio-inline mr-3"><input type="radio" name="guests" value="3"> 3</label>
+                                    <label class="radio-inline mr-3"><input type="radio" name="guests" value="4"> 4</label>
+                                    <label class="radio-inline mr-3"><input type="radio" name="guests" value="5"> 5</label>
+                                    <label class="radio-inline mr-3"><input type="radio" name="guests" value="6"> 6</label>              
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="control-label col-md-2 operation-label">Section</label>
+
+                            <div class="btn-group col-md-6" data-toggle="buttons">
+                                <label class="btn btn-primary btn-sm active btn-success">
+                                    <input type="checkbox" checked autocomplete="off"> Non-Smocking
+                                </label>
+                                <label class="btn btn-primary btn-sm btn-danger">
+                                    <input type="checkbox" autocomplete="off">Smocking
+                                </label>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="control-label col-md-2 operation-label">Date and Time</label>
+                            <div class="input-group col-md-4">
+                                <span class="input-group-addon">
+                                    <i class="fa fa-calendar"></i>
+                                </span>
+                                <input id="date" type="text" class="form-control" name="date" placeholder="Date">
+                            </div>
+                            <div class="input-group col-md-4">
+                                <span class="input-group-addon">
+                                    <i class="fa fa-clock-o"></i>
+                                </span>
+                                <input id="time" type="text" class="form-control" name="time" placeholder="Time">
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <div class="w-100 offset-2">
+                        <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Cancel</button>
+                        <button type="submit" class="btn btn-primary btn-sm">Reserve</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <nav class="navbar navbar-inverse navbar-toggleable-sm fixed-top">
         <div class="container">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
@@ -97,8 +157,8 @@
                 </div>
                 <div class="col-12 col-md-3 align-self-center">
                     <!-- <a href="#reservTable" type="button" class="btn-sm btn-block btn-warning align-self-center" style="text-align:center">Reserve Table</a> -->
-                    <a href="#reservTable" type="button" class="btn btn-warning btn-sm btn-block" data-toggle="modal" data-html="true" 
-                        data-placement="bottom" data-target="#resevModal">Reserve Table</a>
+                    <a href="#reservTable" type="button" class="btn btn-warning btn-sm btn-block" data-toggle="modal" data-html="true" data-placement="bottom"
+                        data-target="#resevModal">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -214,7 +274,7 @@
                 </div>
             </div>
         </div>
-<!--
+        <!--
         <div class="row row-content align-items-center">
             <div class="card col-12 col-sm-8">
                 <h3 class="card-header card-warning text-white">Reserve a Table</h3>
@@ -265,71 +325,7 @@
 
     </div>
 
-    <div id="resevModal" class="modal fade" role="dialog">
-        <div class="modal-dialog modal-lg" role="content">
-            <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h4 class="modal-title">Reserve a Table</h4>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                </div>
-                <div class="modal-body">
-                    <form class="form-horizontal">
-                        <div class="form-group row">
-                            <label class="control-label col-md-2 operation-label">Number of Guests</label>
-                            <div class="input-group col-md-6">
-                                <label>
-                                    <input type="radio" name="optradio"> 1&nbsp&nbsp</label>
-                                <label>
-                                    <input type="radio" name="optradio"> 2&nbsp&nbsp</label>
-                                <label>
-                                    <input type="radio" name="optradio"> 3&nbsp&nbsp</label>
-                                <label>
-                                    <input type="radio" name="optradio"> 4&nbsp&nbsp</label>
-                                <label>
-                                    <input type="radio" name="optradio"> 5&nbsp&nbsp</label>
-                                <label>
-                                    <input type="radio" name="optradio"> 6&nbsp&nbsp</label>
-                            </div>
-                        </div>
-                        <div class="form-group row">
-                            <label class="control-label col-md-2 operation-label">Section</label>
 
-                            <div class="btn-group col-md-6" data-toggle="buttons">
-                                <label class="btn btn-primary btn-sm active btn-success">
-                                    <input type="checkbox" checked autocomplete="off"> Non-Smocking
-                                </label>
-                                <label class="btn btn-primary btn-sm btn-danger">
-                                    <input type="checkbox" autocomplete="off">Smocking
-                                </label>
-                            </div>
-                        </div>
-                        <div class="form-group row">
-                            <label class="control-label col-md-2 operation-label">Date and Time</label>
-                            <div class="input-group col-md-4">
-                                <span class="input-group-addon">
-                                    <i class="fa fa-calendar"></i>
-                                </span>
-                                <input id="date" type="text" class="form-control" name="date" placeholder="Date">
-                            </div>
-                            <div class="input-group col-md-4">
-                                <span class="input-group-addon">
-                                    <i class="fa fa-clock-o"></i>
-                                </span>
-                                <input id="time" type="text" class="form-control" name="time" placeholder="Time">
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <div class="w-100 offset-2">
-                        <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Cancel</button>
-                        <button type="submit" class="btn btn-primary btn-sm">Reserve</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <footer class="footer">
         <div class="container">
